# Endpoint/UpdateDocuments.php
@@ -14,19 +14,19 @@ namespace Swiftype\AppSearch\Endpoint;
  * @package Swiftype\AppSearch\Endpoint
  * @author  Aurélien FOUCRET <aurelien.foucret@elastic.co>
  */
-class CreateEngine extends AbstractEndpoint
+class UpdateDocuments extends AbstractEndpoint
 {
 // phpcs:disable
     /**
      * @var string
      */
-    protected $method = 'POST';
+    protected $method = 'PATCH';
 
     /**
      * @var string
      */
-    protected $uri = '/engines';
+    protected $uri = '/engines/{engine_name}/documents';
 
-    protected $paramWhitelist = ['name', 'language'];
+    protected $routeParams = ['engine_name'];
 // phpcs:enable
 }
