# resources/api/api-spec.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.2
 
 info:
   title: "Swiftype App Search API"
@@ -10,29 +10,24 @@ components:
     pageCurrent:
       name: page.current
       in: query
-      description: The current page
+      description: The current page.
       schema:
         type: integer
         format: int32
-        default: 1
-      x-example: page.current=1
     pageSize:
       name: page.size
       in: query
-      description: The number of results to show on each page
+      description: The number of results to show on each page.
       schema:
         type: integer
         format: int32
-        default: 20
-      x-example: page.size=20
     engineNameParam:
       name: engine_name
       in: path
-      description: Name of the engine
+      description: Name of the engine.
       required: true
       schema:
         type: string
-      x-example": rent-a-car
 
 paths:
   /engines:
@@ -54,12 +49,17 @@ paths:
       - name: name
         in: query
         description: Engine name.
+        required: true
         schema:
           type: string
-        x-example: name=mysuper-engine
+      - name: language
+        in: query
+        description: Language code.
+        schema:
+          type: string
       responses:
         "application/json":
-          description: "List of available engines."
+          description: "Engine data."
 
   /engines/{engine_name}:
     get:
@@ -79,7 +79,7 @@ paths:
       - $ref: "#/components/parameters/engineNameParam"
       responses:
         "application/json":
-          description: "Engine data."
+          description: "Engine deletion result."
 
   /engines/{engine_name}/search:
     post:
@@ -87,20 +87,123 @@ paths:
       tags:
       - search
       parameters:
+      - $ref: "#/components/parameters/engineNameParam"
       - name: query
         in: query
         description: Search query text.
         schema:
           type: string
-        x-example: query=foo+bar
-      - $ref: "#/components/parameters/engineNameParam"
+        required: true
       - $ref: "#/components/parameters/pageCurrent"
       - $ref: "#/components/parameters/pageSize"
+      - name: filters
+        in: query
+        description: Search query filters.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: sort
+        in: query
+        description: Search query sort orders.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: facets
+        in: query
+        description: Search query facets.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: search_fields
+        in: query
+        description: Search query fields and weights.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: boosts
+        in: query
+        description: Search query boosts.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: group
+        in: query
+        description: Search result group specification.
+        x-php-default-value: []
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: result_fields
+        in: query
+        description: Search result fields.
+        x-php-default-value: []
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      - name: analytics.tags
+        in: query
+        description: Analytics tags for the current search.
+        x-php-default-value: []
+        schema:
+          type: array
+          items:
+            type: string
+        required: false
       responses:
         "application/json":
           description: "Search result response."
 
+  /engines/{engine_name}/multi_search:
+    post:
+      operationId: multiSearch
+      tags:
+      - search
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - name: queries
+        in: query
+        description: Array of search queries.
+        schema:
+          type: array
+          items:
+            type: object
+        required: false
+      responses:
+        "application/json":
+          description: "Array of search result response."
+
   /engines/{engine_name}/documents:
+    get:
+      operationId: getDocuments
+      tags:
+      - documents
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - name: ids
+        in: query
+        description: Documents ids.
+        schema:
+          type: array
+          items:
+            type: string
+        required: true
+      responses:
+        "application/json":
+          description: "Document indexing response."
     post:
       operationId: indexDocuments
       tags:
@@ -108,11 +211,60 @@ paths:
       parameters:
       - $ref: "#/components/parameters/engineNameParam"
       requestBody:
-        description: Search query text.
+        description: Indexed documents.
         content:
           "*":
             schema:
-                type: string
+                type: array
+                items:
+                  type: object
       responses:
         "application/json":
           description: "Document indexing response."
+    patch:
+      operationId: updateDocuments
+      tags:
+      - documents
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      requestBody:
+        description: Documents update.
+        content:
+          "*":
+            schema:
+                type: array
+                items:
+                  type: object
+      responses:
+        "application/json":
+          description: "Document update response."
+    delete:
+      operationId: deleteDocuments
+      tags:
+      - documents
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      requestBody:
+        description: Documents update.
+        content:
+          "*":
+            schema:
+                type: array
+                items:
+                  type: string
+      responses:
+        "application/json":
+          description: "Document delete response."
+
+  /engines/{engine_name}/documents/list:
+    get:
+      operationId: listDocuments
+      tags:
+      - documents
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - $ref: "#/components/parameters/pageCurrent"
+      - $ref: "#/components/parameters/pageSize"
+      responses:
+        "application/json":
+          description: "Document list."
